update micronaut version, experiment with Result<R,E> monad