@@ -9,7 +9,7 @@
   <parent>
     <groupId>io.micronaut</groupId>
     <artifactId>micronaut-parent</artifactId>
-    <version>2.0.2</version>
+    <version>2.4.2</version>
   </parent>
 
   <properties>
@@ -19,15 +19,15 @@
     <maven.compiler.release>${jdk.version}</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <micronaut.version>2.0.2</micronaut.version>
-    <micronaut.security.version>2.0.0</micronaut.security.version>
-    <micronaut.data.version>1.1.3</micronaut.data.version>
-    <micronaut.openapi.version>1.5.1</micronaut.openapi.version>
+    <micronaut.version>2.4.2</micronaut.version>
+    <micronaut.security.version>2.4.2</micronaut.security.version>
+    <micronaut.data.version>2.4.1</micronaut.data.version>
+    <micronaut.openapi.version>2.4.0</micronaut.openapi.version>
     <exec.mainClass>ru.pudgy.vertex.Application</exec.mainClass>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     <maven.org.projectlombok.version>1.18.12</maven.org.projectlombok.version>
-    <mapstruct.version>1.4.0.CR1</mapstruct.version>
+    <mapstruct.version>1.4.2.Final</mapstruct.version>
     <swagger.version>2.1.1</swagger.version>
     <assertj.version>3.11.1</assertj.version>
 
@@ -227,9 +227,71 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+          <release>${jdk.version}</release>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>-J-Dmicronaut.openapi.views.spec=rapidoc.enabled=true,swagger-ui.enabled=true,swagger-ui.theme=flattop</arg>
+          </compilerArgs>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+          </annotationProcessorPaths>
+
+        </configuration>
+        <executions>
+          <execution>
+            <id>test-compile</id>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <source>${maven.compiler.source}</source>
+              <target>${maven.compiler.target}</target>
+              <release>${maven.compiler.release}</release>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+                  <version>${lombok.version}</version>
+                </path>
+                <path>
+                  <groupId>org.mapstruct</groupId>
+                  <artifactId>mapstruct-processor</artifactId>
+                  <version>${mapstruct.version}</version>
+                </path>
+              </annotationProcessorPaths>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
+          <argLine>--enable-preview</argLine>
           <detail>true</detail>
           <includes>
             <include>%regex[.*]</include>
@@ -288,7 +350,7 @@
               <version>${micronaut.version}</version>
             </path>
             <path>
-              <groupId>io.micronaut.configuration</groupId>
+              <groupId>io.micronaut.openapi</groupId>
               <artifactId>micronaut-openapi</artifactId>
               <version>${micronaut.openapi.version}</version>
             </path>
@@ -336,7 +398,7 @@
                   <version>${micronaut.version}</version>
                 </path>
                 <path>
-                  <groupId>io.micronaut.configuration</groupId>
+                  <groupId>io.micronaut.openapi</groupId>
                   <artifactId>micronaut-openapi</artifactId>
                   <version>${micronaut.openapi.version}</version>
                 </path>
